refactor: HttpResponse 분리